bdr.BDR.scala.error
Erreur de compilation :
BDR:59: error: Unmatched closing brace '}' ignored here
	}
        ^